[metadata]
name = pwn_gadget
version =  0.0.1
url = https://github.com/h1ghl1kh7/bp-libc-got
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
description = Breakpoint at the address in the .got.plt section of the libraries loaded in the target process
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
python_requires = >= 3.8
